tests/fixtures/realworld/istio/valid/case-052-RW-8-107-ServiceEntry-endpoint-with-invalid-port-number-fails.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: invalid-endpoint-port
  namespace: default
spec:
  hosts:
  - example.com
  ports:
  - number: 80
    name: http
    protocol: HTTP
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
  - address: 192.168.1.1
    ports:
      http: 99999
